@@ -1,3 +1,10 @@
+2014-01-17  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/agent_manager.php: fixed the PHP warnings and
+	notices.
+	
+	Fixes: #2414
+
 2014-01-17 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>
 
 	* godmode/events/event_edit_filter.php
